--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.0.0-beta.2"
   }
 }
