--- a/package.json
+++ b/package.json
@@ -5,20 +5,19 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack serve --open --config ./webpack.config.js --mode development --hot",
-    "start:build": "webpack serve --open --config ./webpack.config.js --mode production --hot",
     "build": "webpack --config ./webpack.config.js --mode production"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
+    "@babel/core": "^7.14.8",
     "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-env": "^7.14.8",
     "@babel/preset-typescript": "^7.14.5",
-    "@babel/runtime": "^7.14.6",
+    "@babel/runtime": "^7.14.8",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "html-webpack-plugin": "^5.3.2",
-    "webpack": "^5.42.0",
+    "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.0.0-beta.2"
+    "webpack-dev-server": "^4.0.0-rc.0"
   }
 }
