--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "> TODO: description",
   "author": "fangmingdong <fangmingdong@58.com>",
   "homepage": "https://github.com/fangmd/js-lib#readme",
-  "main": "./dist/myLib.js",
+  "main": "dist/lib/index.js",
+  "module": "dist/lib/index.js",
+  "typings": "dist/lib/index.d.ts",
   "license": "MIT",
   "files": [
     "dist"
   ],
   "scripts": {
     "start": "webpack serve --open --config ./webpack.config.js --mode development --hot",
-    "build": "webpack --config ./webpack.config.js --mode production"
+    "build": "webpack --config ./webpack.config.js --mode production",
+    "prebuild": "rimraf dist",
+    "postbuild": "tsc"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
@@ -20,10 +24,11 @@
     "@babel/preset-typescript": "^7.14.5",
     "@babel/runtime": "^7.14.8",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.0.0-rc.0"
-  }
+    "webpack-dev-server": "^4.0.0-rc.0",
+    "rimraf": "^3.0.2"
+  },
+  "dependencies": {}
 }
