--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@passon/js-lib-template",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "> TODO: description",
   "author": "fangmingdong <fangmingdong@58.com>",
   "homepage": "https://github.com/fangmd/js-lib#readme",
@@ -26,9 +26,10 @@
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.2",
     "rimraf": "^3.0.2",
-    "webpack": "^5.47.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.0.0-rc.0"
+    "typescript": "^4.4.2",
+    "webpack": "^5.52.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.0"
   },
   "dependencies": {}
 }
