--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "webpack serve --open --config ./webpack.config.js --mode development --hot",
     "build": "webpack --config ./webpack.config.js --mode production",
     "prebuild": "rimraf dist",
-    "postbuild": "tsc"
+    "postbuild": "tsc",
+    "dev": "ts-node"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
@@ -26,6 +27,7 @@
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.2",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.2",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
